changing images, aria labels, and fixing alignment

--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@ body {
     padding-left: 2rem;
     padding-right: 2rem;
     background-color: var(--secondary-color);
-    padding-top:80px
+    padding-top: 80px;
 }
 
 /* .responsive-img-container {
